integration_tests/codegen_fail/fail/interface/struct/attr_field_non_output_return_type.rs
use juniper::{graphql_interface, GraphQLInputObject};

#[derive(GraphQLInputObject)]
pub struct ObjB {
    id: i32,
}

#[graphql_interface]
struct Character {
    id: ObjB,
}

fn main() {}
